@@ -1,3 +1,7 @@
+2008-08-30  Wakaba  <wakaba@suika.fam.cx>
+
+	* Result.pm (add_error): Support for |value|-segment marking.
+
 2008-08-22  Wakaba  <wakaba@suika.fam.cx>
 
 	* Result.pm (add_error): Localize "description" link.
